# summarizer

./: Dockerfile  LICENSE  Makefile  README.md  azure_ai_search.env.sample  azure_chat_openai.env.sample  azure_embeddings_openai.env.sample  azure_openai.env.sample  langsmith.env.sample  ms_app.env.sample  pyproject.toml
.github/workflows/: release.yml  test.yml
data/: favorite_sports.csv
notebooks/: 0_curl-example.ipynb  1_handson-pandas.ipynb
scripts/: agent.py  azure_ai_search.py  gpt4v.py  index.py  langgraph_agent.py  msgraph.py  msgraph_app.py  summarize_pdf.py  youtube_app.py
server/: main.py
server/routers/: chat.py  generate_prompt.py  rag.py  search.py  summarize.py  util.py
server/settings/: azure_ai_search.py  azure_chat_openai.py  azure_embeddings_openai.py  azure_openai.py
