[tool.poetry]
name = "summarizer"
version = "0.0.1"
description = "summarizer"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.0"
langserve = {extras = ["server"], version = "^0.0.38"}


[tool.poetry.group.lint.dependencies]
ruff = "^0.1.11"
codespell = "^2.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
